Increased strength, rebalanced torque and ranges
By using open humanoid env as reference and testing strengths.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div id="main_holder">
       <h1>Reinforcement Learning 2D Humanoid Walkers</h1>
-      <h3 id="page_quote">"Play that funky music robot"</h3>
+      <h3 id="page_quote">"Play that funky music, robot"</h3>
       <canvas id="main_screen" width="800" height="350"></canvas>
       <div id="generation_timer"><div id="generation_timer_bar">&nbsp;</div></div>
 
