moving around, webpack

--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,31 @@
   <head>
     <title>HTML5 Genetic Algorithm Biped Walkers</title>
     <link rel="stylesheet" href="css/walkers.css" type="text/css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
     <script src="vendor/jsbox2d.js"></script>
-    <script src="vendor/neurojs-v2.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.11.6"> </script> -->
+
+    <!-- <script type="text/javascript" src="/js/ddpg/models.js"></script> -->
+    <!-- <script type="text/javascript" src="/js/ddpg/memory.js"></script> -->
+    <!-- <script type="text/javascript" src="/js/ddpg/prioritized_memory.js"></script>
+    <script type="text/javascript" src="/js/ddpg/noise.js"></script>
+    <script type="text/javascript" src="/js/ddpg/ddpg.js"></script>
+    <script type="text/javascript" src="/js/ddpg/ddpg_agent.js"></script>
+    <script type="text/javascript" src="/js/ddpg-traffic/index.js"></script>
+
     <script src="js/walker.js"></script>
     <script src="js/game.js"></script>
     <script src="js/floor.js"></script>
     <script src="js/draw.js"></script>
     <script src="js/agent.js"></script>
-    <script src="js/charts.js"></script>
+    <script src="js/charts.js"></script> -->
+
+    <script src="dist/bundle.js"></script>
+
+
+
     <script>
 
       function init() {
