frontend loads files

--- a/src/index.html
+++ b/src/index.html
@@ -24,19 +24,8 @@
     <script src="js/agent.js"></script>
     <script src="js/charts.js"></script> -->
 
-    <script src="dist/bundle.js"></script>
+    
 
-
-
-    <script>
-
-      function init() {
-        gameInit();
-      }
-
-      window.addEventListener("load", init, false);
-
-    </script>
 
   </head>
   <body>
@@ -68,5 +57,8 @@
 
     </div>
   </body>
+  <script src="../dist/vendor.bundle.js"></script>
+  <script src="../dist/lib.bundle.js"></script>
+  <script src="../dist/app.bundle.js"></script>
 </html>
 
