--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
     <div id="info">
       Teaching 2d humanoids to walk in your browser using reinforcement learning. You can view the progress at
       differen't stages of training with the buttons below.
+      <p></p>
+      It's goal it to hold it head upright and move to the right. If you load it's brain from differen't times you can see it's progress.
       <p></p><br />
       Technical: This uses use reinforcement learning to teach them
       to walk. This is a branch of machine learning targeted at controlling systems such as system of limbs. Training
