--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,17 @@
     <image style="display: none" src="./images/background.png"></image><!-- for google and previews-->
 
     <div id="info">
-      Teaching 2d humanoids to walk in your browser using reinforcement learning. You can view the progress at
-      differen't stages of training with the buttons below.
+      What is this? An experiment to teach 2D humanoids to walk in your browser using reinforcement learning. The walker is reward for keeping it's head above its feet and moving to the right of the screen. 
+      First it wiggled to the right, then crawed, loped, then learnt to a wierd skipping hopping motion.
+
+      You can view the progress at differen't stages of training with the buttons below.
       <p></p><br />
-      Technical: This uses use reinforcement learning to teach them
+      How does it work?: This uses use reinforcement learning to teach them
       to walk. This is a branch of machine learning targeted at controlling systems such as system of limbs. Training
       is done offline in tensorflow.js. The environment is in box2d for javascript. The aglorithm is DDPG with
       prioritized experince replay.
       <p></p>
-      The dark outlines are when the agent grips the floor, since I found walking was difficult otherwise. The balls
-      are to provide obstacles.
+      The dark outlines are when the agent grips the floor, since I found walking was difficult otherwise. The balls are to provide obstacles.
       <p></p><br />
       Credits: The walker code is adapted from <a href="http://rednuht.org/genetic_walkers/">rednuht.org/genetic_walkers/</a>,
       the DDPG code was adapted from <a href="https://github.com/thibo73800/metacar">github.com/thibo73800/metacar</a>.
@@ -38,6 +39,8 @@
       <button onclick="game.agent.restore('./checkpoints', 'model-ddpg-walker-4h/model')">4 hours</button>
       <button onclick="game.agent.restore('./checkpoints', 'model-ddpg-walker-8h/model')">8 hours</button>
       <button onclick="game.agent.restore('./checkpoints', 'model-ddpg-walker-22h/model')">22 hours</button>
+      <button onclick="game.agent.restore('./checkpoints', 'model-ddpg-walker-42h/model')">42 hours</button>
+      <button onclick="game.agent.restore('./checkpoints', 'model-ddpg-walker-60h/model')">60 hours</button>
     </div>
     <div>
       <h4>Be mean:</h4><button onclick="game.agent.env.chuckBalls()">Thow balls</button>
@@ -51,7 +54,7 @@
 function init() {
   var canvas_id = 'main_screen2'
   window.game = new Game(config, canvas_id)
-  game.agent.restore('./checkpoints', 'model-ddpg-walker-22h/model') // load checkpoint
+  game.agent.restore('./checkpoints', 'model-ddpg-walker-60h/model') // load checkpoint
   game.agent.restore('../outputs', 'model-ddpg-walker/model') // load latest
   game.loop()
 
