--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
       <button onclick="game.agent.restore('./checkpoints', 'model-ddpg-walker-22h/model')">22 hours</button>
       <button onclick="game.agent.restore('./checkpoints', 'model-ddpg-walker-42h/model')">42 hours</button>
       <button onclick="game.agent.restore('./checkpoints', 'model-ddpg-walker-60h/model')">60 hours</button>
+      <button onclick="game.agent.restore('../outputs', 'model-ddpg-walker/model')">Latest</button>
     </div>
     <div>
       <h4>Be mean:</h4><button onclick="game.agent.env.chuckBalls()">Thow balls</button>
