--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+  <a href="https://github.com/wassname/rl_2d_walker.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
   <div id="main_holder">
     <h1>Reinforcement Learning 2D Humanoid Walkers</h1>
     <h3 id="page_quote">"Play that funky music, robot"</h3>
@@ -34,6 +36,9 @@
       <p></p>
       
       <p></p><br />
+
+      source code  <a href="https://github.com/wassname/rl_2d_walker.js">https://github.com/wassname/rl_2d_walker.js</a><p></p>
+
       Credits: 
       <ul>
         <li>Made by <a href="wassname.org">wassname</a> for <a href="thinkcds.com">thinkcds.com</a></li>
