--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       
       <p></p><br />
 
-      source code  <a href="https://github.com/wassname/rl_2d_walker.js">https://github.com/wassname/rl_2d_walker.js</a><p></p>
+      Source code  <a href="https://github.com/wassname/rl_2d_walker.js">https://github.com/wassname/rl_2d_walker.js</a><p></p>
 
       Credits: 
       <ul>
